k8s/apps/api/service.yaml
# Users API Service
# @author Shanaka Jayasundera - shanakaj@gmail.com

apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: api
  labels:
    app: users-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: users-api
